<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Athena</string>
    <string name="navigation_main">首页</string>
    <string name="navigation_example">常用设计模式</string>
    <string name="navigation_my_blog">博客</string>
    <string name="navigation_mystar">收藏</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_exit">退出应用</string>
    <string name="navigation_5">关于</string>

    <string name="zone">个人中心</string>
    <string name="weather">天气</string>
    <string name="offline">离线</string>
    <string name="theme">夜间</string>
    <string name="search">搜索</string>
    <string name="scan">扫一扫</string>
    <string name="setting">设置</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="err_system">系统繁忙，请稍候再试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
